<resources>
    <string name="app_name">NewsApp</string>
    <string name="refresh_button">refresh_button</string>
    <string name="top_headlines">TOP HEADLINES</string>
    <string name="menu_button">menu button</string>
    <string name="textview">textview</string>
    <string name="the_morning_feed">The Morning Feed</string>
    <string name="crispy_news_at_your_fingertips">Short News Read</string>
    <string name="next">GO</string>
    <string name="loading">Loading…</string>
    <string name="logo">logo</string>
    <string name="api_key">7525bcf71a594270aa02e5deb5da2981</string>
    <string name="technology">technology</string>
    <string name="business">business</string>
    <string name="entertainment">entertainment</string>
    <string name="general">general</string>
    <string name="health">health</string>
    <string name="sports">sports</string>
    <string name="science">science</string>
    <string name="speak">Speak</string>

</resources>